<resources>
    <string name="app_name">MyApp</string>
    <string name="movie_age_limit">%d+</string>
    <string name="movie_age_limit_stub">13+</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="movie_tagline">Action, Adventure, Fantasy</string>
    <string name="movie_reviews">%d reviews</string>
    <string name="movie_reviews_stub">125 reviews</string>
    <string name="movie_duration">%d min</string>
    <string name="movie_storyline_title">Storyline</string>
    <string name="movie_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_cast_title">Cast</string>
    <string name="movie_actor1_name">Robert Downey Jr.</string>
    <string name="movie_actor2_name">Chris Evans</string>
    <string name="movie_actor3_name">Mark Ruffalo</string>
    <string name="movie_actor4_name">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="movies_list_title">Movies list</string>
</resources>
