<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.FragmentMoviesDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="60dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.5"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/back_icon"
            app:layout_constraintStart_toEndOf="@+id/back_icon"
            app:layout_constraintTop_toTopOf="@+id/back_icon" />

        <TextView
            android:id="@+id/movie_age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="226dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/movie_age_limit_stub"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="-0.01"
            android:text="@string/movie_name"
            android:textColor="@color/title_color"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_age_limit"
            app:lineHeight="40sp" />

        <TextView
            android:id="@+id/movie_tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_tagline"
            android:textColor="@color/tagline_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:constraint_referenced_ids="movie_rating_star1,movie_rating_star2,movie_rating_star3,movie_rating_star4,movie_rating_star5"
            app:flow_horizontalGap="2dp"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toStartOf="@+id/movie_reviews"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_tagline" />

        <ImageView
            android:id="@+id/movie_rating_star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            app:tint="@color/active_star_color" />

        <ImageView
            android:id="@+id/movie_rating_star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            app:tint="@color/active_star_color" />

        <ImageView
            android:id="@+id/movie_rating_star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            app:tint="@color/active_star_color" />

        <ImageView
            android:id="@+id/movie_rating_star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            app:tint="@color/active_star_color" />

        <ImageView
            android:id="@+id/movie_rating_star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            app:tint="@color/inactive_star_color" />

        <TextView
            android:id="@+id/movie_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/movie_reviews_stub"
            android:textAllCaps="true"
            android:textColor="@color/inactive_star_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toEndOf="@+id/movie_rating"
            app:layout_constraintTop_toTopOf="@+id/movie_rating" />

        <TextView
            android:id="@+id/movie_storyline_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/movie_storyline_title"
            android:textColor="@color/title_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.75"
            android:text="@string/movie_storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_storyline_title"
            app:lineHeight="20sp" />

        <TextView
            android:id="@+id/movie_cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/movie_cast_title"
            android:textColor="@color/title_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/end_guideline"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_cast_title"
            tools:listitem="@layout/view_holder_actor" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
